[package]
name = "ha-heating-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
serde = { version = "1.0.188", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.100"
