[package]
name = "ha-heating-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
serde = { version = "1.0.188", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["cors"] }
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.15.0"
